--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,8 @@ input::-webkit-inner-spin-button {
 }
 
 .exercise .exercise__content .exercise__item input,
-.exercise .exercise__content .exercise__item button {
+.exercise .exercise__content .exercise__item button,
+.exercise .exercise__content .exercise__item select {
     font-size: 1.5rem;
 }
 
